Attempt to fix links overflow

--- a/style-manual.css
+++ b/style-manual.css
@@ -45,6 +45,7 @@ nav a:hover {
   display:flex;
   padding-top: 0.5em;
   font-size: 2.2em;
+  flex-wrap: nowrap;
 }
 
 .sidebar {
